css/style.css
@import "reset.css";
@import "media.css";

/*English*/


/*Korean*/

@font-face {
    font-family: 'GothicA1';
    src: url('../fonts/GothicA1-Black.woff') format('woff');
    font-family: 'SharpGrotesk';
    src: url('../fonts/SharpGroteskUltExpBook.woff2') format('woff2'), url('../fonts/SharpGroteskUltExpBook.woff') format('woff')
}

::-webkit-scrollbar {
    display: none;
}


/*link styles*/

a {
    text-decoration: none;
    color: white;
    -webkit-text-stroke: 0 black;
}

a:hover {
    color: dimgrey;
}


/********** GLOBAL TYPOGRAPHY **********/

::selection {
    color: dimgrey;
}

.grid__8 button1 p en:hover {
    cursor: pointer;
}

.grid__11 button2 p en:hover {
    cursor: pointer;
}

.grid__14 button3 p en:hover {
    cursor: pointer;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: "SharpGrotesk", "GothicA1", sans-serif;
    font-size: 3vw;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-transform: uppercase;
    line-height: .8em;
    vertical-align: text-bottom;
    width: 100vw;
    height: calc(100%);
    background-color: black;
}

en {
    color: dimgrey;
}


/********** INDEX **********/


/*Nav*/

.nav {
    color: white;
    display: flex;
    justify-content: space-between;
    background-color: black;
    padding-left: 1%;
    padding-right: 1%;
    padding-top: 1vh;
    font-size: 0.6em;
}

.nav__right {
    display: flex;
}

.nav__right li {
    margin-left: 20px;
}


/*Landing-Vid*/

.landing_vid_container {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing_vid {
    width: 100%;
}


/*Landing-Words*/

.landing_words_container {
    color: white;
    margin: 0 2%;
    margin-bottom: 2%;
}

.landing_words {
    font-size: 0.4em;
    line-height: 97%;
}


/********** COURSE **********/

.course_description {
    padding-top: 4em;
    width: 96%;
    line-height: 1.2em;
    font-size: 0.4em;
    /*text-align: center;*/
    /*width: 900px;*/
    margin: 0 auto;
    color: white;
    padding-bottom: 1.5%;
    margin-left: 2%;
    margin-right: 2%;
}

.course__vid1 {
    width: 100%;
}

.course__vid2 {
    width: 40%;
}

.grid_wrap {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

.grid__1 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__2 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__3 {
    grid-column-start: 2;
    grid-column-end: 6;
    padding-top: 20px;
}

.grid__4 {
    grid-column-start: 2;
    grid-column-end: 5;
    padding-top: 35px;
}

.grid__5 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__6 {
    grid-column-start: 2;
    grid-column-end: 6;
    display: flex;
    width: 100%;
    justify-content: center;
    position: relative;
    margin-top: 80px;
    margin-bottom: 80px;
}

.grid__7 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__8 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__9 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__10 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__11 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__12 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__13 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__14 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__15 {
    grid-column-start: 2;
    grid-column-end: 6;
}

.grid__16 {
    grid-column-start: 6;
    grid-column-end: 7;
    position: fixed;
    width: 10%;
    bottom: 2%;
    right: 2%;
}

.grid__16__vid {
    width: 8%;
    position: fixed;
    bottom: 2%;
    right: 1%;
}


/********** CONTACT **********/

.contact_vid_container {
    height: 80vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact_vid {
    position: relative;
    top: 4%;
    width: 100%;
}

.contact_words_container {
    color: white;
    position: fixed;
    bottom: 1%;
    margin-left: 2%;
    margin-right: 2%;
}

.contact_words {
    font-size: 0.4em;
    line-height: 97%;
}

